Updates in demo code to match project updates